[package]
description = "HAL implementations for NXP i.MX RT500 series microcontrollers"
edition = "2021"
license = "MIT"
name = "mimxrt500-hal"
repository = "https://github.com/apparentlymart/rust-mimxrt500"
version = "0.6.0"

[dependencies]
cortex-m = "0.7"
embedded-hal = "1.0.0-alpha.11"
jlink_rtt = {version = "0.2", optional = true}
mimxrt595s = {version = "0.5.0", path = "../mimxrt595s", optional = true}
nb = "1.1"
paste = "1.0.11"

[features]
mimxrt595s = ["dep:mimxrt595s", "fowlp"]
mimxrt595s_rt = ["dep:mimxrt595s", "mimxrt595s/rt", "fowlp"]

# fowlp and wlcsp are mutually-exclusive and represent the two different
# package types supported in the RT500 series, which cause some minor
# differences such as with pin muxing configuration.
fowlp = ["device"]
wlcsp = ["device"]

device = []
library = []
use_rtt = ["dep:jlink_rtt"]

[package.metadata.docs.rs]
features = ["mimxrt595s"]

[package.metadata.release]
enable-features = ["mimxrt595s"]
