[package]
description = "Startup code for NXP i.MX RT500 series microcontrollers" 
edition = "2021" 
license = "MIT" 
links = "mimxrt500-rt" # Prevent multiple versions of mimxrt500-rt being linked
name = "mimxrt500-rt" 
repository = "https://github.com/apparentlymart/rust-mimxrt500" 
version = "0.1.0" 

[dependencies]
cortex-m = "0.7.0"
cortex-m-rt-macros = "0.7.0"

[features]
device = []

[package.metadata.docs.rs]
features = ["device"]
