[package]
description = "Built-in bootstub code for NXP i.MX RT595 Evaluation Kit"
edition = "2021"
license = "MIT"
name = "mimxrt595-evk-bootstub"
repository = "https://github.com/apparentlymart/rust-mimxrt500"
version = "0.1.0"

[lib]
name = "mimxrt595_evk_bootstub"
path = "src/lib.rs"

[dependencies]
mimxrt500-bootstub = {version = "0.1.0", path = "../mimxrt500-bootstub"}
mimxrt595-evk = {version = "0.3.0", path = "../mimxrt595-evk"}

[features]
bootstub = []
default = ['bootstub']

[package.metadata.docs.rs]
no-default-features = true
