[package]
description = "Board support package for NXP i.MX RT595 Evaluation Kit"
edition = "2021"
license = "MIT"
name = "mimxrt595-evk"
repository = "https://github.com/apparentlymart/rust-mimxrt500"
version = "0.3.0"

[[bin]]
name = "bootstub-evk"
path = "src/bin/bootstub-evk.rs"
required-features = ["bootstub-standalone-bin"]

[lib]
name = "mimxrt595_evk"
path = "src/lib.rs"

[dependencies]
mimxrt500-bootstub = {version = "0.1.0", path = "../mimxrt500-bootstub"}
mimxrt500-hal = {version = "0.4.0", path = "../mimxrt500-hal", features = ["mimxrt595s"]}
mimxrt595s = {version = "0.3.0", path = "../mimxrt595s"}

[features]
bootstub-standalone-bin = []
