[package]
description = "Peripheral access crate (PAC) for NXP i.MX RT595S microcontrollers"
edition = "2021"
license = "MIT"
name = "mimxrt595s"
repository = "https://github.com/apparentlymart/rust-mimxrt500"
version = "0.2.0"

[dependencies]
cortex-m = "0.7.6"
critical-section = {version = "1.0", optional = true}
mimxrt500-rt = {version = "0.1.0", path = "../mimxrt500-rt", optional = true, features = ["device"]}
vcell = "0.1.2"

[features]
rt = ["dep:mimxrt500-rt"]
