[package]
description = "Peripheral access crate (PAC) for NXP i.MX RT595S microcontrollers"
edition = "2021"
license = "MIT"
name = "mimxrt595s"
repository = "https://github.com/apparentlymart/rust-mimxrt500"
version = "0.4.0"

[dependencies]
cortex-m = "0.7.6"
critical-section = {version = "1.0", optional = true}
cortex-m-rt = {version = "0.7.3", optional = true, features = ["device"]}
vcell = "0.1.2"

[features]
rt = ["dep:cortex-m-rt"]
