[package]
edition = "2021"
name = "scratch"
version = "0.1.0"
publish = false

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = {version = "0.7.3", features = ["device"]}
mimxrt500-hal = {path = "../mimxrt500-hal", features = ["mimxrt595s_rt"]}
mimxrt595-evk = {path = "../mimxrt595-evk"}
mimxrt595-evk-bootstub = {path = "../mimxrt595-evk-bootstub"}
mimxrt595s = {path = "../mimxrt595s", features = ["rt"]}
panic-rtt-target = {version = "0.1.2", features = ["cortex-m"]}
rtt-target = "0.4.0"
embedded-hal = "1.0.0-alpha.11"

[package.metadata.release]
release = false
publish = false
